--- a/notebooks/03_feedback_effects.ipynb
+++ b/notebooks/03_feedback_effects.ipynb
@@ -12,88 +12,152 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e72f430",
+   "id": "xxqne27arjl",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artifact_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>evidence_type</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>gold_controls</th>\n",
+       "      <th>partition</th>\n",
+       "      <th>gold_rationale</th>\n",
+       "      <th>auditor_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Multiple failed logins from 10.0.5.12 to auth-...</td>\n",
+       "      <td>log</td>\n",
+       "      <td>2025-09-15T09:00:00Z</td>\n",
+       "      <td>AC-7;AU-6</td>\n",
+       "      <td>feedback</td>\n",
+       "      <td>Lockout threshold not enforced; correlated via...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>S3 bucket finance-archive not encrypted at res...</td>\n",
+       "      <td>config</td>\n",
+       "      <td>2025-09-15T09:03:00Z</td>\n",
+       "      <td>SC-28;SC-12</td>\n",
+       "      <td>feedback</td>\n",
+       "      <td>At-rest encryption and key management gaps ⇒ S...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>NTP drift 62s on db-01; not synced to authorit...</td>\n",
+       "      <td>log</td>\n",
+       "      <td>2025-09-15T09:06:00Z</td>\n",
+       "      <td>AU-8</td>\n",
+       "      <td>feedback</td>\n",
+       "      <td>Clock drift jeopardizes timestamp integrity ⇒ ...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>API gateway rate limiting disabled; prior DDoS...</td>\n",
+       "      <td>log</td>\n",
+       "      <td>2025-09-15T09:09:00Z</td>\n",
+       "      <td>SC-5;SC-7</td>\n",
+       "      <td>feedback</td>\n",
+       "      <td>DoS protection missing; boundary controls impl...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>TLS disabled on api-gateway; HTTP allowed; wea...</td>\n",
+       "      <td>config</td>\n",
+       "      <td>2025-09-15T09:12:00Z</td>\n",
+       "      <td>SC-8;SC-13</td>\n",
+       "      <td>feedback</td>\n",
+       "      <td>Insecure transport and crypto configuration ⇒ ...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   artifact_id                                               text  \\\n",
+       "0         2000  Multiple failed logins from 10.0.5.12 to auth-...   \n",
+       "1         2001  S3 bucket finance-archive not encrypted at res...   \n",
+       "2         2002  NTP drift 62s on db-01; not synced to authorit...   \n",
+       "3         2003  API gateway rate limiting disabled; prior DDoS...   \n",
+       "4         2004  TLS disabled on api-gateway; HTTP allowed; wea...   \n",
+       "\n",
+       "  evidence_type             timestamp gold_controls partition  \\\n",
+       "0           log  2025-09-15T09:00:00Z     AC-7;AU-6  feedback   \n",
+       "1        config  2025-09-15T09:03:00Z   SC-28;SC-12  feedback   \n",
+       "2           log  2025-09-15T09:06:00Z          AU-8  feedback   \n",
+       "3           log  2025-09-15T09:09:00Z     SC-5;SC-7  feedback   \n",
+       "4        config  2025-09-15T09:12:00Z    SC-8;SC-13  feedback   \n",
+       "\n",
+       "                                      gold_rationale  auditor_id  \n",
+       "0  Lockout threshold not enforced; correlated via...           1  \n",
+       "1  At-rest encryption and key management gaps ⇒ S...           2  \n",
+       "2  Clock drift jeopardizes timestamp integrity ⇒ ...           3  \n",
+       "3  DoS protection missing; boundary controls impl...           4  \n",
+       "4  Insecure transport and crypto configuration ⇒ ...           5  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "\n",
-    "import yaml\n",
-    "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from crs.dataio import load_artifacts, load_controls\n",
-    "from crs.controls import build_index_text\n",
-    "from crs.recommenders.tfidf import TFIDFRecommender\n",
-    "from crs.metrics import top1_accuracy, precision_at_k, recall_at_k, jaccard\n",
-    "from crs.feedback import learn_from_train\n",
-    "\n",
-    "CFG_PATH = Path('../configs/defaults.yaml')\n",
-    "cfg = yaml.safe_load(CFG_PATH.read_text())\n",
-    "\n",
-    "controls = load_controls(cfg['paths']['controls'])\n",
-    "artifacts = load_artifacts(cfg['paths']['artifacts'])\n",
-    "index_texts = build_index_text(controls)\n",
-    "\n",
-    "rec = TFIDFRecommender(\n",
-    "    ngram_range=tuple(cfg.get('tfidf', {}).get('ngram_range', [1,2])),\n",
-    "    min_df=cfg.get('tfidf', {}).get('min_df', 1)\n",
-    ").fit(index_texts, controls['control_id'].tolist())\n",
-    "\n",
-    "k = cfg.get('k', 3)\n",
-    "train = artifacts[artifacts['split']=='train'].copy()\n",
-    "test  = artifacts[artifacts['split']=='test'].copy()\n",
-    "\n",
-    "# Baseline\n",
-    "rows=[]\n",
-    "for _, r in test.iterrows():\n",
-    "    ids, scores = rec.predict_topk(r['text'], k=k)\n",
-    "    rows.append({'artifact_id': int(r['artifact_id']), 'gold_controls': r['gold_controls'],\n",
-    "                 'predicted_topk': ';'.join(ids), 'scores_topk': ';'.join(f\"{s:.4f}\" for s in scores)})\n",
-    "preds_base = pd.DataFrame(rows)\n",
-    "\n",
-    "# Learn boosts/negatives\n",
-    "boosts, negatives = learn_from_train(train, rec, rounds=1, alpha=0.03, beta=0.01)\n",
-    "\n",
-    "# Feedback variant\n",
-    "rows_fb=[]\n",
-    "for _, r in test.iterrows():\n",
-    "    ids, scores = rec.predict_topk(r['text'], k=k, boosts=boosts, negatives=negatives)\n",
-    "    rows_fb.append({'artifact_id': int(r['artifact_id']), 'gold_controls': r['gold_controls'],\n",
-    "                    'predicted_topk': ';'.join(ids), 'scores_topk': ';'.join(f\"{s:.4f}\" for s in scores)})\n",
-    "preds_fb = pd.DataFrame(rows_fb)\n",
-    "\n",
-    "def metrics_row(df, tag):\n",
-    "    return {\n",
-    "        'tag': tag,\n",
-    "        'top1': round(top1_accuracy(df), 3),\n",
-    "        f'P@{k}': round(precision_at_k(df, k=k), 3),\n",
-    "        f'R@{k}': round(recall_at_k(df, k=k), 3),\n",
-    "        f'J@{k}': round(jaccard(df, k=k), 3),\n",
-    "    }\n",
-    "\n",
-    "m = pd.DataFrame([metrics_row(preds_base, 'baseline'), metrics_row(preds_fb, 'feedback')])\n",
-    "display(m)\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.bar(m['tag'], m[f'P@{k}'])\n",
-    "plt.title('Precision@{}: Baseline vs Feedback'.format(k))\n",
-    "plt.xlabel('Model')\n",
-    "plt.ylabel('Precision')\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "out_dir = Path('../outputs/predictions'); out_dir.mkdir(parents=True, exist_ok=True)\n",
-    "preds_base.to_csv(out_dir/'test_baseline.csv', index=False)\n",
-    "preds_fb.to_csv(out_dir/'test_feedback.csv', index=False)\n",
-    "print('Saved:', out_dir/'test_baseline.csv', 'and', out_dir/'test_feedback.csv')\n"
+    "# Load round feedback data and add auditor_id column\n",
+    "feedback_df = pd.read_csv('../data/raw/round_feedback_full.csv')\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
