Update project structure and add new data files
- Enhanced the .gitignore to exclude additional files, including evaluation tables and virtual environment directories.
- Updated the refactor.ipynb notebook to reflect changes in the project environment and dependencies.
- Introduced a new requirements.txt file to manage core dependencies for the project.
- Added multiple new CSV and JSON files for processed data, including artifacts, control rationales, and feedback, to support improved analysis and model training.
- Created new Jupyter notebooks for feedback evaluation and model training, expanding the project's capabilities and documentation.

--- a/notebooks/01_data_prep_and_splits.ipynb
+++ b/notebooks/01_data_prep_and_splits.ipynb
@@ -37,6 +37,8 @@
     "## Outputs\n",
     "\n",
     "- `data/processed/artifacts_with_split.csv` with validated schema and enforced partitions.\n",
+    "- `data/processed/control_rationales.json` with rationale patterns per control.\n",
+    "- `data/processed/controls_enhanced.csv` with rationale-augmented control descriptions.\n",
     "- Inline partition and evidence-type summary tables for sanity checks."
    ]
   },
@@ -48,10 +50,11 @@
     "## Steps\n",
     "\n",
     "1. Load raw CSVs, assert required columns, and coerce types (IDs as strings, timestamps as datetime).\n",
-    "2. If `partition` is missing or blank, assign stratified 60/20/20 (train/dev/test) using a fixed RNG seed.\n",
+    "2. If `partition` is missing or blank, assign stratified 70/15/15 (train/dev/test) using a fixed RNG seed.\n",
     "3. Normalize artifact text (lowercase + trim) to build a leakage hash and detect duplicates.\n",
     "4. Resolve duplicates so each unique text appears in exactly one split (prefer train when conflicts).\n",
-    "5. Drop helper hash columns, persist the processed CSV, and surface partition/evidence counts."
+    "5. Extract gold_rationale patterns per control and create enhanced control descriptions.\n",
+    "6. Drop helper hash columns, persist the processed CSV, and surface partition/evidence counts."
    ]
   },
   {
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "y7jh086hhb",
    "metadata": {
     "execution": {
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "8qxhur1u8tf",
    "metadata": {
     "execution": {
@@ -115,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Loaded 31 controls\n",
+      "✓ Loaded 34 controls\n",
       "  Columns: ['control_id', 'family', 'title', 'summary']\n"
      ]
     },
@@ -184,7 +187,7 @@
        "2  Enforce lockout thresholds and durations after...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "vumpp2ji9me",
    "metadata": {
     "execution": {
@@ -221,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Loaded 1000 artifacts\n",
+      "✓ Loaded 2656 artifacts\n",
       "  Columns: ['artifact_id', 'text', 'evidence_type', 'timestamp', 'gold_controls', 'gold_rationale']\n"
      ]
     },
@@ -257,30 +260,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10522</td>\n",
-       "      <td>Asset inventory shows 22 untagged cloud instan...</td>\n",
-       "      <td>config</td>\n",
-       "      <td>2025-09-18 05:20:00+00:00</td>\n",
-       "      <td>CM-8</td>\n",
-       "      <td>Information system component inventory incompl...</td>\n",
+       "      <td>10001</td>\n",
+       "      <td>User 'svc-api' failed login 11 times in 2 minu...</td>\n",
+       "      <td>log</td>\n",
+       "      <td>2025-09-15 08:15:00+00:00</td>\n",
+       "      <td>AC-7;AU-6</td>\n",
+       "      <td>Failed login threshold was met without a locko...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10738</td>\n",
-       "      <td>API gateway rate limiting configured; DDoS pro...</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>Configuration scan shows object store bucket '...</td>\n",
        "      <td>config</td>\n",
-       "      <td>2025-11-11 09:00:00+00:00</td>\n",
-       "      <td>SC-5;SC-7</td>\n",
-       "      <td>Traffic filtering implemented to prevent DoS a...</td>\n",
+       "      <td>2025-09-15 09:22:10+00:00</td>\n",
+       "      <td>SC-28;SC-12</td>\n",
+       "      <td>Information at rest is not encrypted and crypt...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10741</td>\n",
-       "      <td>SSH daemon configuration hardened; root login ...</td>\n",
-       "      <td>config</td>\n",
-       "      <td>2025-11-11 09:45:00+00:00</td>\n",
-       "      <td>AC-17;SC-8</td>\n",
-       "      <td>Remote access security enhanced with strong cr...</td>\n",
+       "      <td>10003</td>\n",
+       "      <td>CHG-9901: Emergency hotfix for API memory leak...</td>\n",
+       "      <td>ticket</td>\n",
+       "      <td>2025-09-15 11:45:30+00:00</td>\n",
+       "      <td>CM-3;SA-11</td>\n",
+       "      <td>A configuration change was deployed without co...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -288,22 +291,22 @@
       ],
       "text/plain": [
        "  artifact_id                                               text  \\\n",
-       "0       10522  Asset inventory shows 22 untagged cloud instan...   \n",
-       "1       10738  API gateway rate limiting configured; DDoS pro...   \n",
-       "2       10741  SSH daemon configuration hardened; root login ...   \n",
+       "0       10001  User 'svc-api' failed login 11 times in 2 minu...   \n",
+       "1       10002  Configuration scan shows object store bucket '...   \n",
+       "2       10003  CHG-9901: Emergency hotfix for API memory leak...   \n",
        "\n",
        "  evidence_type                 timestamp gold_controls  \\\n",
-       "0        config 2025-09-18 05:20:00+00:00          CM-8   \n",
-       "1        config 2025-11-11 09:00:00+00:00     SC-5;SC-7   \n",
-       "2        config 2025-11-11 09:45:00+00:00    AC-17;SC-8   \n",
+       "0           log 2025-09-15 08:15:00+00:00     AC-7;AU-6   \n",
+       "1        config 2025-09-15 09:22:10+00:00   SC-28;SC-12   \n",
+       "2        ticket 2025-09-15 11:45:30+00:00    CM-3;SA-11   \n",
        "\n",
        "                                      gold_rationale  \n",
-       "0  Information system component inventory incompl...  \n",
-       "1  Traffic filtering implemented to prevent DoS a...  \n",
-       "2  Remote access security enhanced with strong cr...  "
+       "0  Failed login threshold was met without a locko...  \n",
+       "1  Information at rest is not encrypted and crypt...  \n",
+       "2  A configuration change was deployed without co...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,12 +334,12 @@
    "id": "jlt99xsbgur",
    "metadata": {},
    "source": [
-    "## 2. Assign train/dev/test partitions (60/20/20)"
+    "## 2. Assign train/dev/test partitions (70/15/15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "hoes68nj9v",
    "metadata": {
     "execution": {
@@ -351,13 +354,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚠ No partition column found or all values are missing. Assigning 60/20/20 split...\n",
+      "⚠ No partition column found or all values are missing. Assigning 70/15/15 split...\n",
       "\n",
       "✓ Partition distribution:\n",
       "partition\n",
-      "dev      200\n",
-      "test     200\n",
-      "train    600\n",
+      "dev       398\n",
+      "test      399\n",
+      "train    1859\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -365,14 +368,14 @@
    "source": [
     "# Check if partition column exists\n",
     "if \"partition\" not in artifacts.columns or artifacts[\"partition\"].isna().all():\n",
-    "    print(\"⚠ No partition column found or all values are missing. Assigning 60/20/20 split...\")\n",
+    "    print(\"⚠ No partition column found or all values are missing. Assigning 70/15/15 split...\")\n",
     "    \n",
     "    # Shuffle and split\n",
     "    n = len(artifacts)\n",
     "    indices = np.random.permutation(n)\n",
     "    \n",
-    "    train_end = int(0.6 * n)\n",
-    "    dev_end = int(0.8 * n)\n",
+    "    train_end = int(0.7 * n)   # Changed from 0.6\n",
+    "    dev_end = int(0.85 * n)     # Changed from 0.8\n",
     "    \n",
     "    partitions = np.empty(n, dtype=object)\n",
     "    partitions[indices[:train_end]] = \"train\"\n",
@@ -399,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "gitdzst42c",
    "metadata": {
     "execution": {
@@ -414,10 +417,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 86 unique texts appearing in multiple partitions\n",
+      "Found 77 unique texts appearing in multiple partitions\n",
       "\n",
       "⚠ Resolving duplicates (keeping first occurrence, preferring train)...\n",
-      "  Removed 95 duplicate rows\n"
+      "  Removed 82 duplicate rows\n"
      ]
     }
    ],
@@ -472,6 +475,130 @@
   },
   {
    "cell_type": "markdown",
+   "id": "rrycnjbd7l",
+   "metadata": {},
+   "source": [
+    "## 3a. Extract rationales and create enhanced controls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cvvc9sgk5sj",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting rationales per control...\n",
+      "✓ Extracted rationales for 34 controls\n",
+      "  Saved to: ../data/processed/control_rationales.json\n",
+      "\n",
+      "  Example (first 3 controls):\n",
+      "    AC-7: 66 unique rationales\n",
+      "    AU-6: 107 unique rationales\n",
+      "    SC-28: 70 unique rationales\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "print(\"Extracting rationales per control...\")\n",
+    "\n",
+    "# Create output directory if needed (define it here)\n",
+    "output_dir = Path(\"../data/processed\")\n",
+    "output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Group rationales by control ID\n",
+    "control_rationales = defaultdict(set)\n",
+    "\n",
+    "for _, row in artifacts.iterrows():\n",
+    "    if pd.notna(row[\"gold_rationale\"]) and row[\"gold_rationale\"].strip():\n",
+    "        # Get controls for this artifact\n",
+    "        controls_list = str(row[\"gold_controls\"]).split(\";\")\n",
+    "        rationale = str(row[\"gold_rationale\"]).strip()\n",
+    "        \n",
+    "        # Add rationale to each control\n",
+    "        for ctrl in controls_list:\n",
+    "            control_rationales[ctrl.strip()].add(rationale)\n",
+    "\n",
+    "# Convert to dict with lists\n",
+    "rationale_dict = {k: list(v) for k, v in control_rationales.items()}\n",
+    "\n",
+    "# Save to JSON\n",
+    "rationale_path = output_dir / \"control_rationales.json\"\n",
+    "with open(rationale_path, \"w\") as f:\n",
+    "    json.dump(rationale_dict, f, indent=2)\n",
+    "\n",
+    "print(f\"✓ Extracted rationales for {len(rationale_dict)} controls\")\n",
+    "print(f\"  Saved to: {rationale_path}\")\n",
+    "print(f\"\\n  Example (first 3 controls):\")\n",
+    "for ctrl_id in list(rationale_dict.keys())[:3]:\n",
+    "    print(f\"    {ctrl_id}: {len(rationale_dict[ctrl_id])} unique rationales\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bky6av0yvyk",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating enhanced control descriptions...\n",
+      "✓ Created enhanced control descriptions\n",
+      "  Saved to: ../data/processed/controls_enhanced.csv\n",
+      "\n",
+      "  Example enhanced descriptions (first 3):\n",
+      "\n",
+      "  AC-2: Account Management. Provision, review, and remove accounts; enforce least privilege and approvals.. Common patterns: A failure in the account manageme...\n",
+      "\n",
+      "  AC-6: Least Privilege. Restrict privileges to the minimum necessary; approve/administer role changes.. Common patterns: The principle of least privilege was...\n",
+      "\n",
+      "  AC-7: Unsuccessful Logon Attempts. Enforce lockout thresholds and durations after consecutive failed logins.. Common patterns: Repeated failures of the mult...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Creating enhanced control descriptions...\")\n",
+    "\n",
+    "# Function to enhance control description with rationale examples\n",
+    "def enhance_control_description(row):\n",
+    "    ctrl_id = row[\"control_id\"]\n",
+    "    base_text = f\"{row['title']}. {row['summary']}\"\n",
+    "    \n",
+    "    if ctrl_id in rationale_dict and len(rationale_dict[ctrl_id]) > 0:\n",
+    "        # Take up to 5 most common rationales\n",
+    "        rationales = \"; \".join(rationale_dict[ctrl_id][:5])\n",
+    "        return f\"{base_text}. Common patterns: {rationales}\"\n",
+    "    return base_text\n",
+    "\n",
+    "# Create enhanced controls dataframe\n",
+    "controls_enhanced = controls.copy()\n",
+    "controls_enhanced[\"index_text\"] = controls_enhanced.apply(enhance_control_description, axis=1)\n",
+    "\n",
+    "# Save enhanced controls\n",
+    "enhanced_path = output_dir / \"controls_enhanced.csv\"\n",
+    "controls_enhanced.to_csv(enhanced_path, index=False)\n",
+    "\n",
+    "print(f\"✓ Created enhanced control descriptions\")\n",
+    "print(f\"  Saved to: {enhanced_path}\")\n",
+    "\n",
+    "# Show examples\n",
+    "print(f\"\\n  Example enhanced descriptions (first 3):\")\n",
+    "for i in range(min(3, len(controls_enhanced))):\n",
+    "    ctrl = controls_enhanced.iloc[i]\n",
+    "    preview = ctrl[\"index_text\"][:150] + \"...\" if len(ctrl[\"index_text\"]) > 150 else ctrl[\"index_text\"]\n",
+    "    print(f\"\\n  {ctrl['control_id']}: {preview}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "wdt3lz06459",
    "metadata": {},
    "source": [
@@ -480,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "mguvtb9m21c",
    "metadata": {
     "execution": {
@@ -495,13 +622,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved 905 artifacts to ../data/processed/artifacts_with_split.csv\n",
+      "✓ Saved 2574 artifacts to ../data/processed/artifacts_with_split.csv\n",
       "\n",
       "Final partition distribution:\n",
       "partition\n",
-      "dev      162\n",
-      "test     148\n",
-      "train    595\n",
+      "dev       365\n",
+      "test      354\n",
+      "train    1855\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -522,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "l1i057442w",
    "metadata": {
     "execution": {
@@ -541,12 +668,12 @@
       "============================================================\n",
       "Evidence Type × Partition Distribution\n",
       "============================================================\n",
-      "partition      dev  test  train  All\n",
-      "evidence_type                       \n",
-      "config          57    57    194  308\n",
-      "log             56    48    216  320\n",
-      "ticket          49    43    185  277\n",
-      "All            162   148    595  905\n"
+      "partition      dev  test  train   All\n",
+      "evidence_type                        \n",
+      "config         102    97    531   730\n",
+      "log            140   139    702   981\n",
+      "ticket         123   118    622   863\n",
+      "All            365   354   1855  2574\n"
      ]
     }
    ],
@@ -569,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "n435n0luvto",
    "metadata": {
     "execution": {
@@ -644,7 +771,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
